[package]
name = "tiny-tile-proxy"
version = "0.1.7"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

[[bin]]
name = "TinyTileProxy"
path = "src/main.rs"

[workspace.dependencies]
anyhow = "1.0.93"

[dependencies]
anyhow = { workspace = true }
figment = { version = "0.10", features = ["toml"] }
minijinja = "2.3.1"
reqwest = { version = "0.12", features = [
    "gzip",
    "rustls-tls",
], default-features = false }
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
# My Crates
webp_to_png = { path = "./crates/webp_to_png" }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1 # 控制代码生成的单元数量
lto = true        # 启用链接时优化, 减少生成的二进制文件的大小并提高性能
opt-level = "s"   # 设置优化级别
panic = "unwind"  # 控制 panic 时的行为 unwind: 在 panic 时展开堆栈
strip = true      # 控制是否剥离生成的二进制文件中的符号信息
